--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -180,7 +180,7 @@
                         }
                         else
                         {
-                            <button class="notify-btn addTobasket btn_notification-bell_@Model.ProductId" onclick="removeNotifyProduct(@Model.ProductId,true)"><i class="fa fa-bell-o list-icon"></i> NOTIFY ME WHEN AVAILABLE</button>
+                            <button class="notify-btn addTobasket btn_notification-bell_@Model.ProductId" style="background-color: red" onclick="removeNotifyProduct(@Model.ProductId,true)"><i class="fa fa-bell-o list-icon"></i> NOTIFY ME WHEN AVAILABLE</button>
                             @*<a href="javascript:;" onclick="removeNotifyProduct(@Model.ProductId,true)" class="addtowishlist list-icon bell-icon notification-bell_@Model.ProductId"><i class="fa fa-bell-o list-icon" style="color:red"></i></a>*@
 
                         }
