--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -40,21 +40,24 @@
                              src="@(!string.IsNullOrEmpty(Model.DefaultImage?.Trim()) ? ViewBag.BaseFilePath + Model.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")"
                              data-zoom-image="@(!string.IsNullOrEmpty(Model.DefaultImage?.Trim()) ? ViewBag.BaseFilePath + Model.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" />
                     </span>
-                    <div class="img_thumb_sliderwrap">
-                        <div id="gal01" class="owl-carousel owl-theme nb_imageZoomCarrousle">
-                            @foreach (var item in (Model.ProductFiles))
-                            {
-                                var extension = Path.GetExtension(item.FilePath);
-                                <div class="item">
-                                    <a href="#" data-image="@(!string.IsNullOrEmpty(item.FilePath) ? ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" data-zoom-image="@(!string.IsNullOrEmpty(item.FilePath) ? ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")">
-                                        <img id="zoom_01" src="@(!string.IsNullOrEmpty(item.FilePath) ? ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="" />
-                                    </a>
-                                </div>
+                    @if (Model.ProductFiles.Count > 1)
+                    {
+                        <div class="img_thumb_sliderwrap">
+                            <div id="gal01" class="owl-carousel owl-theme nb_imageZoomCarrousle">
+                                @foreach (var item in (Model.ProductFiles))
+                                {
+                                    var extension = Path.GetExtension(item.FilePath);
+                                    <div class="item">
+                                        <a href="#" data-image="@(!string.IsNullOrEmpty(item.FilePath) ? ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" data-zoom-image="@(!string.IsNullOrEmpty(item.FilePath) ? ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")">
+                                            <img id="zoom_01" src="@(!string.IsNullOrEmpty(item.FilePath) ? ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="" />
+                                        </a>
+                                    </div>
 
-                            }
+                                }
 
+                            </div>
                         </div>
-                    </div>
+                    }
                 </div>
             </div>
             <div class="col-md-7 col-lg-6 offset-lg-1">
