--- a/WarehouseEcommerce/Content/Theme/University/app/css/App.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/App.css
@@ -1153,17 +1153,17 @@ input[type="number"]::-webkit-outer-spin-button {
             .prd_det_sec
             .prd_amnt {
                 font-family: "primaryfont_Bold";
-                font-size: 25px;
+                font-size: 20px;
                 color: #fff;
                 display: block;
-                width: 100%;
                 text-align: center;
-                background-color: #414343;
-                padding: 6px 34px;
+                background-color: #707070;
+                padding: 10px 10px;
                 position: relative;
                 z-index: 1;
-                letter-spacing: 5px;
+                letter-spacing: 4px;
             }
+
 
                 .nb_feat_prod_sec
                 .nb_featuredPrdCarrousle
@@ -2125,7 +2125,7 @@ input[type="number"]::-webkit-outer-spin-button {
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: space-between;
     }
 
         .prd_lst_boxouter .foot .prd_amnt {
