--- a/WarehouseEcommerce/Views/Theme/University/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_SpecialProductPartial.cshtml
@@ -9,75 +9,100 @@
             <div class="nb_header_style1">
                 <h3>Featured Products</h3>
             </div>
-            <div class="row">
-                <div class="owl-carousel owl-theme nb_featuredPrdCarrousle">
+            <div class="row list-on-tablets">
+                <div class="owl-carousel owl-theme nb_featuredPrdCarrousle nb_prd_listing_wrap">
                     @foreach (var item in Model.productMasterList)
                     {
-                        item.ProductTagMaps = item.ProductTagMaps.OrderBy(x => x.ProductTag.SortOrder).ToList();
+                        item.ProductTagMaps = item.ProductTagMaps.Where(u => u.IsDeleted != true).Where(u => u.ProductTag.IsDeleted != true).OrderBy(x => x.ProductTag.SortOrder).ToList();
 
-                        <div class="item">
-                            <span class="imagewrap">
-                                <a href="@Url.Action("ProductDetails", "Products", new {sku = item.SKUCode})" class="nb_fp_boxwrap">
-                                    <span class="prd_img">
-                                        <img src="@(!string.IsNullOrEmpty(item.DefaultImage) ? ViewBag.BaseFilePath + item.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@item.Name" title="@item.Name" class="img-fluid center-block" />
-                                    </span>
-                                </a>
-                            </span>
-                            <div class="nb_fp_boxwrap">
-                                <div class="prd_det_sec">
-                                    <h4 title="@item.Name" class="prd_name">@item.Name</h4>
-                                    <ul class="foot">
-                                        <li>
-                                            <a class="prd_amnt pull-left" href="@Url.Action("ProductDetails","Products", new {sku=item.SKUCode})">
-                                                @ViewBag.CurrencySymbol@item.SellPrice
-                                            </a>
-                                        </li>
-                                        @if (item.ProductType != ProductKitTypeEnum.Grouped && item.ProductType != ProductKitTypeEnum.Kit)
-                                        {
-                                            var totaltems = item.WebsiteWishListItems.FirstOrDefault(u => u.IsDeleted != true && u.UserId == ViewBag.CurrentUserId && !u.IsNotification);
 
-                                            <li>
-                                                @if (totaltems == null)
+                    <div class="item prd_lst_boxouter">
+                                                @for (int i = 0; i < item.ProductTagMaps.Count; i++)
                                                 {
-                                                    <a href="javascript:;" id="wish_@item.ProductId" onclick="AddToWishList(@item.ProductId, false)"><i class="icon-love list-icon pull-right" style="color: black;font-size: 28px;"></i></a>
-                                                }
-                                                else
-                                                {
-                                                    <a href="javascript:;" id="wish_@item.ProductId" onclick="RemoveWishListPopUp(@item.ProductId,false)"><i class="icon-love list-icon pull-right" style="color: red;font-size: 28px;"></i></a>
-                                                }
-                                            </li>
-
-                                            <li>
-                                                @if (item.SellPrice > 0 && item.SellPrice.HasValue && item.ProductType != ProductKitTypeEnum.ProductByAttribute && Ganedata.Core.Services.Inventory.GetStockDetailByProductId(item.ProductId) > 0)
-                                                {
-
-                                                    <a href="javascript:;" onclick="addToCart(@item.ProductId)"><i class="icon-shopping-cart list-icon pull-right"></i></a>
-
-
-                                                }
-                                                else if (@item.SellPrice > 0 && @item.SellPrice.HasValue  && item.ProductType == ProductKitTypeEnum.ProductByAttribute && Ganedata.Core.Services.Inventory.GetStockDetailByProductId(item.ProductId) > 0)
-                                                {
-                                                    <a href="javascript:;" onclick="showProductByAttributeSelector('@item.SKUCode')"><i class="icon-shopping-cart pull-right"></i></a>
-                                                }
-                                                else
-                                                {
-                                                    var totalwishlistitems = item.WebsiteWishListItems.FirstOrDefault(u => u.IsDeleted != true && u.UserId == ViewBag.CurrentUserId && u.IsNotification);
-
-                                                    if (totalwishlistitems == null)
+                                                    if (i < 3)
                                                     {
-                                                        <a href="javascript:;" onclick="AddWishListItemStockNotAvailable(@item.ProductId)" class="notification-bell_@item.ProductId"><i class="fa fa-bell-o list-icon pull-right" style="color:black"></i></a>
+                                                        <span class="badge badge-@i">
+                                                            <img src="@(ViewBag.BaseFilePath + item.ProductTagMaps.ToList()[i].ProductTag.IconImage)" alt="" />
+                                                        </span>
                                                     }
-                                                    else
-                                                    {
-                                                        <a href="javascript:;" onclick="removeNotifyProduct(@item.ProductId,true)" class="notification-bell_@item.ProductId"><i class="fa fa-bell-o list-icon pull-right" style="color: red"></i></a>
-                                                    }
+
                                                 }
-                                            </li>
-                                        }
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+
+                                                <span class="imagewrap">
+                                                    <a href="@Url.Action("ProductDetails","Products", new {sku=item.SKUCode})">
+                                                        <img src="@(!string.IsNullOrEmpty(item.DefaultImage) ? ViewBag.BaseFilePath + item.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" />
+                                                    </a>
+                                                </span>
+                                                <h3 class="prdName">
+                                                    <a class="prdName" href="@Url.Action("ProductDetails","Products", new {sku=item.SKUCode})">
+                                                        @item.Name
+                                                    </a>
+                                                </h3>
+                                                <div class="foot">
+                                                    <a class="prd_amnt" href="@Url.Action("ProductDetails","Products", new {sku=item.SKUCode})">
+                                                        @ViewBag.CurrencySymbol@item.SellPrice
+                                                    </a>
+                                                    @if (item.ProductType != ProductKitTypeEnum.Grouped && item.ProductType != ProductKitTypeEnum.Kit)
+                                                    {
+                                                        <ul class="icolist">
+
+                                                            @if (item.SellPrice > 0 && item.SellPrice.HasValue && item.ProductType != ProductKitTypeEnum.ProductByAttribute && Ganedata.Core.Services.Inventory.GetStockDetailByProductId(@item.ProductId) > 0)
+                                                            {
+                                                                <li>
+                                                                    <a href="javascript:;" onclick="addToCart(@item.ProductId)"><i class="icon-shopping-cart"></i></a>
+                                                                </li>
+
+
+                                                            }
+                                                            else if (@item.SellPrice > 0 && item.SellPrice.HasValue && item.ProductType == ProductKitTypeEnum.ProductByAttribute && Ganedata.Core.Services.Inventory.GetStockDetailByProductId(@item.ProductId) > 0)
+                                                            {
+                                                                <li>
+                                                                    <a href="javascript:;" onclick="showProductByAttributeSelector('@item.SKUCode')"><i class="icon-shopping-cart"></i></a>
+                                                                </li>
+                                                            }
+                                                            else
+                                                            {
+                                                                var totalwishlistitems = item.WebsiteWishListItems.FirstOrDefault(u => u.IsDeleted != true && u.UserId == ViewBag.CurrentUserId && u.IsNotification);
+
+                                                                if (totalwishlistitems == null)
+                                                                {
+                                                                    <li>
+                                                                        <a href="javascript:;" onclick="AddWishListItemStockNotAvailable(@item.ProductId)" class="notification-bell_@item.ProductId"><i class="fa fa-bell-o list-icon" style="color:black"></i></a>
+                                                                    </li>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <li>
+                                                                        <a href="javascript:;" onclick="removeNotifyProduct(@item.ProductId,true)" class="notification-bell_@item.ProductId"><i class="fa fa-bell-o list-icon" style="color:red"></i></a>
+                                                                    </li>
+
+                                                                }
+
+
+                                                            }
+
+                                                            @{
+                                                                var totaltems = item.WebsiteWishListItems.FirstOrDefault(u => u.IsDeleted != true && u.UserId == ViewBag.CurrentUserId && !u.IsNotification);
+                                                            }
+                                                            @if (totaltems == null)
+                                                            {
+                                                                <li>
+                                                                    <a href="javascript:;" id="wish_@item.ProductId" onclick="AddToWishList(@item.ProductId, false)"><i class="icon-love list-icon" style="color: black;font-size: 28px;"></i></a>
+                                                                </li>
+                                                            }
+                                                            else
+                                                            {
+                                                                <li>
+                                                                    <a href="javascript:;" id="wish_@item.ProductId" onclick="RemoveWishListPopUp(@item.ProductId,false)"><i class="icon-love list-icon" style="color: red;font-size: 28px;"></i></a>
+                                                                </li>
+                                                            }
+                                                        </ul>
+                                                    }
+                                                </div>
+                              
+
+
+                    </div>
 
                     }
                 </div>
