home featured product and dynamic text on home page added Imported from Changeset 2851

--- a/WarehouseEcommerce/Views/Theme/University/Shared/_TopCategoryPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_TopCategoryPartial.cshtml
@@ -4,7 +4,7 @@
     <section class="nb_sec nb_top_catSection">
         <div class="container">
             <div class="nb_header_style1">
-                <h3>Top Categories</h3>
+                <h3>@(ViewBag.TopCategoryText==null ? "Top Categories" : ViewBag.TopCategoryText)</h3>
             </div>
             <div class="accordion">
                 <ul>
