--- a/WMS/Views/Theme/Default/TenantWebsites/Create.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/Create.cshtml
@@ -68,7 +68,7 @@
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.Theme, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.EnumDropDownListFor(model => model.Theme, "Select Theme", htmlAttributes: new { @class = "form-control" })
+                    @Html.EnumDropDownListFor(model => model.Theme, "Select Theme", htmlAttributes: new { @class = "form-control chosen-select" })
                     @Html.ValidationMessageFor(model => model.Theme, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -112,6 +112,27 @@
                 <div class="col-md-8">
                     @Html.EditorFor(model => model.WebsiteContactEmail, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.WebsiteContactEmail, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.LabelFor(model => model.HomeTopCategoryText, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.HomeTopCategoryText, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.HomeTopCategoryText, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.LabelFor(model => model.HomeFeaturedProductText, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.HomeFeaturedProductText, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.HomeFeaturedProductText, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.LabelFor(model => model.FeaturedTagId,  htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                   @Html.DropDownListFor(model => model.FeaturedTagId, ViewBag.ProductTag as SelectList, "Select Tag", htmlAttributes: new { @class = "form-control chosen-select" })
+                    @Html.ValidationMessageFor(model => model.FeaturedTagId, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
